force-app/main/default/objects/SLR_obj_externalPost__c/SLR_obj_externalPost__c.object-meta.xml
<CustomObject>
    <label>POST externo</label>
    <nameField>
        <label>POST externo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POSTS externos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>