force-app/main/default/objects/SLR_obj_externalPost__c/fields/SLR_fld_body__c.field-meta.xml
<CustomField>
    <fullName>SLR_fld_body__c</fullName>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>