force-app/main/default/objects/SLR_obj_externalPost__c/fields/SLR_fld_title__c.field-meta.xml
<CustomField>
    <fullName>SLR_fld_title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>