force-app/main/default/objects/SLR_obj_externalPost__c/fields/SLR_fld_userId__c.field-meta.xml
<CustomField>
    <fullName>SLR_fld_userId__c</fullName>
    <label>User Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>